<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/layout_achieve_lblA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_achieve_if"
                android:textColor="@color/colorAKText"
                android:textSize="@dimen/textsize_16"/>
            <TextView
                android:id="@+id/layout_achieve_lblB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/store_achieve_10_friends"
                android:textColor="@color/colorAKButton"
                android:textSize="@dimen/textsize_16"/>
            <TextView
                android:id="@+id/layout_achieve_lblC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/store_achieve_get"
                android:textColor="@color/colorAKText"
                android:textSize="@dimen/textsize_16"/>
        </LinearLayout>

        <TextView
            android:id="@+id/layout_achieve_lblD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/store_achieve_earn1"
            android:textColor="@color/colorAKRed"
            android:textSize="@dimen/textsize_18"/>

    </LinearLayout>

    <TextView
        android:id="@+id/layout_achieve_lblMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:layout_marginRight="15dp"
        android:text="@string/store_achieve_gotit"
        android:textColor="@color/colorAKRed"
        android:textSize="@dimen/textsize_18"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="bottom"
        android:background="@color/colorAKButtonDisable"/>
</FrameLayout>


</LinearLayout>