<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAKBackground"
    tools:context="com.oppous.anarko.PayInviteActivity">

    <!-- Top Bar -->
    <FrameLayout
        android:id="@+id/topview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/activity_invite_btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@mipmap/btn_back"
            />
        <TextView
            android:id="@+id/activity_invite_txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_invite"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/textsize_22"
            android:textColor="@color/colorAKText"
            android:shadowColor="@color/colorAKShadow"
            android:shadowRadius="10"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/statusView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/topview">

        <com.oppous.anarko.classes.AKTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/store_invite_nofriends"
            android:textColor="@color/colorAKTextGrey"
            android:textSize="@dimen/textsize_18"
            app:font_name="@string/font_roboto"/>

    </FrameLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/statusView"
        android:layout_above="@+id/inviteButton">

    </ListView>

    <FrameLayout
        android:id="@+id/inviteButton"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/layout_invite_copylink">

        <com.oppous.anarko.classes.AKTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/store_invite_upper"
            android:textColor="@color/colorAKButton"
            android:textSize="@dimen/textsize_22"
            app:font_name="@string/font_gunplay"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/layout_invite_copylink"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_above="@+id/bottomView">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorAKButton"/>

        <com.oppous.anarko.classes.AKTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/store_invite_copy_link"
            android:textColor="@color/colorAKButton"
            android:textSize="@dimen/textsize_22"
            app:font_name="@string/font_gunplay"/>

        <com.oppous.anarko.classes.AKTextView
            android:id="@+id/lblSuperlink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:text="wer3478sk"
            android:textColor="@color/colorAKTextGrey"
            android:textSize="@dimen/textsize_16"
            app:font_name="@string/font_roboto"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_gravity="bottom"
            android:background="@color/colorAKButton"/>

    </FrameLayout>

    <!-- Bottom -->
    <FrameLayout
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">
        <com.oppous.anarko.classes.AKTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/store_invite_nobody"
            android:textColor="@color/colorAKTextGrey"
            android:textSize="@dimen/textsize_18"
            app:font_name="@string/font_roboto"/>
    </FrameLayout>

</RelativeLayout>
