<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAKBackground"
    tools:context="com.oppous.anarko.SettingsChangeNumActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Top Bar -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/activity_changeNum_btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center_vertical"
                android:background="@mipmap/btn_back" />

            <com.oppous.anarko.classes.AKTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/changeNum_title"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="@dimen/textsize_22"
                android:textColor="@color/colorAKText"
                android:shadowColor="@color/colorAKShadow"
                android:shadowRadius="10"
                />

            <com.oppous.anarko.classes.AKTextView
                android:id="@+id/activity_changenum_btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAKButton"
                android:text="@string/top_next"
                android:textSize="@dimen/textsize_20"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="30px"
                android:shadowColor="@color/colorAKShadow"
                app:font_name="@string/font_gunplay"
                android:shadowRadius="10"/>

        </FrameLayout>

        <!-- Contents -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/img_change_num"
                    android:layout_gravity="center"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAKText"
                    android:text="@string/changeNum_content1"
                    android:textAlignment="center"
                    android:layout_marginTop="0dp"
                    android:shadowColor="@color/colorAKShadow"
                    android:shadowRadius="10"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAKText"
                    android:text="@string/changeNum_content2"
                    android:textAlignment="center"
                    android:layout_marginTop="50dp"
                    android:shadowColor="@color/colorAKShadow"
                    android:shadowRadius="10"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAKText"
                    android:text="@string/changeNum_content3"
                    android:textAlignment="center"
                    android:layout_marginTop="110dp"
                    android:shadowColor="@color/colorAKShadow"
                    android:shadowRadius="10"/>

            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/activity_changeNum_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
    </FrameLayout>

</FrameLayout>
