<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAKBackground"
    tools:context="com.oppous.anarko.PayAchievementsActivity">

    <!-- Top Bar -->
    <FrameLayout
        android:id="@+id/topview"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/activity_achieve_btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@mipmap/btn_back"
            />
        <TextView
            android:id="@+id/activity_achieve_txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_achieve_title"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="@dimen/textsize_22"
            android:textColor="@color/colorAKText"
            android:shadowColor="@color/colorAKShadow"
            android:shadowRadius="10"/>
    </FrameLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/topview"
        android:layout_above="@+id/bottomView">

    </ListView>

    <FrameLayout
        android:id="@+id/bottomView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true">

        <com.oppous.anarko.classes.AKTextView
            android:id="@+id/activity_achieve_btnInvite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/store_invite_upper"
            android:textColor="@color/colorAKButton"
            android:textSize="@dimen/textsize_22"
            app:font_name="@string/font_gunplay"/>
    </FrameLayout>

</RelativeLayout>
